# Street-Stickers

./: CMakeLists.txt  Makefile  README.md  game.c  game.h  main.c  test.c  usual.c
include/: struct.h  usual.h
